--- a/html/index.html
+++ b/html/index.html
@@ -31,13 +31,13 @@
  <tbody>
  <tr style="height: 26px;">
   <td>
-  <div id="projectname">Boemska<img alt="Logo" src=""/>Library<!--Boemska--> 
+  <div id="projectname">Boemska<img alt="Macro core" src="../Macro_core_website_1.png"/>Library<!--Boemska--> 
    </div>
   </td>
   <td><table style="padding-left: 2em;" cellspacing="0" cellpadding="0"><tbody>
    <tr><td>
    </td></tr>
-  <td><span id="projectnumber">@VERSION@</span>
+  <td><span id="projectnumber"></span>
    </td></tr>
    </table>
   </td>
