--- a/html/dir_1630efe2bd82ffaaa557c1c0c1380c12.html
+++ b/html/dir_1630efe2bd82ffaaa557c1c0c1380c12.html
@@ -97,7 +97,7 @@ $(document).ready(function(){initNavTree('dir_1630efe2bd82ffaaa557c1c0c1380c12.h
 
 <div class="header">
   <div class="headertitle">
-<div class="title">macrocore-master Directory Reference</div>  </div>
+<div class="title">master Directory Reference</div>  </div>
 </div><!--header-->
 <div class="contents">
 <table class="memberdecls">
