--- a/html/dir_e04ae2849dfa520b4ee2c9f7e9ff15de.html
+++ b/html/dir_e04ae2849dfa520b4ee2c9f7e9ff15de.html
@@ -97,7 +97,7 @@ $(document).ready(function(){initNavTree('dir_e04ae2849dfa520b4ee2c9f7e9ff15de.h
 
 <div class="header">
   <div class="headertitle">
-<div class="title">Desktop Directory Reference</div>  </div>
+<div class="title">Directory Reference</div>  </div>
 </div><!--header-->
 <div class="contents">
 <table class="memberdecls">
